# pcparts

./: DEVELOPMENT.md  README.md  VISION.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  builds.py  health.py  parts.py  prices.py
backend/app/models/: __init__.py  builds.py  compatibility.py  parts.py  prices.py
backend/app/schemas/: __init__.py  builds.py  parts.py  prices.py
backend/app/scrapers/: __init__.py  base.py  bestbuy.py  example.py  manager.py
backend/app/services/: compatibility.py
backend/scripts/: __init__.py  seed.py
backend/src/: index.ts
backend/src/db/: index.ts  schema.ts
backend/src/routes/: builds.ts  parts.ts
backend/src/scrapers/: bestbuy.ts
backend/src/services/: compatibility.ts
backend/tests/: compatibility.test.ts  conftest.py
backend/tests/unit/: test_bestbuy_scraper.py  test_compatibility.py
data/: SOURCES.md
docs/: API.yaml  ARCHITECTURE.md  PRD.md  UI_DESIGN.md
frontend/: package-lock.json
frontend/src/: app.css
frontend/src/lib/components/: CompatibilityBadge.svelte  PartCard.svelte  PriceTable.svelte  SearchBar.svelte
frontend/src/lib/stores/: build.ts
frontend/src/lib/utils/: api.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/part/[id]/: +page.svelte
frontend/src/routes/search/: +page.svelte
